Authentication with Todoist ✔️
- Authentication with Passport 📓
- Session with Cookies 🍪
- User model with Mongoose 🙈

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,6 @@
 <body>
   <h1>Todoist Weekly Review</h1>
 
-  <a href="/auth/oauth2">Login to Todoist</a>
+  <a href="/auth/todoist">Login to Todoist</a>
 </body>
 </html>
