--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,5 +8,13 @@
 </head>
 <body>
   <h1>Todoist Weekly Review</h1>
+
+  <p>
+    <% if (user) { %>
+    <a href="/auth/logout">Logout</a>
+    <% } else { %>
+    <a href="/auth/login">Login</a>
+    <% } %>
+  </p>
 </body>
 </html>
