--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
   <title>Login | Todoist Weekly Review</title>
 </head>
 <body>
-  <h1>Todoist Weekly Review</h1>
+  <h1><abbr title="Getting Things Done">GTD</abbr> Weekly Review</h1>
 
   <a href="/auth/todoist">Login to Todoist</a>
 </body>
