--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Todoist Weekly Review</h1>
-
+  <h1><abbr title="Getting Things Done">GTD</abbr> Weekly Review</h1>
   <p>
     <% if (user) { %>
     <a href="/auth/logout">Logout</a>
