Add Github fork banner

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,5 +10,7 @@
   <h1><abbr title="Getting Things Done">GTD</abbr> Weekly Review</h1>
 
   <a href="/auth/todoist">Login to Todoist</a>
+
+  <%- include('partials/github-fork') %>
 </body>
 </html>
