--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1><abbr title="Getting Things Done">GTD</abbr> Weekly Review</h1>
+
   <p>
     <% if (user) { %>
     <a href="/auth/logout">Logout</a>
@@ -15,5 +16,7 @@
     <a href="/auth/login">Login</a>
     <% } %>
   </p>
+
+  <%- include('partials/github-fork') %>
 </body>
 </html>
