Standardize template <head> 🤓

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Todoist Weekly Review</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%- include('partials/head-meta') %>
+  <title>Home | GTD Weekly Review</title>
 </head>
 <body>
   <h1><abbr title="Getting Things Done">GTD</abbr> Weekly Review</h1>
