--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Login | Todoist Weekly Review</title>
+  <%- include('partials/head-meta') %>
+  <title>Login | GTD Weekly Review</title>
 </head>
 <body>
   <h1><abbr title="Getting Things Done">GTD</abbr> Weekly Review</h1>
