--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,14 +7,15 @@
 <body>
   <h1><abbr title="Getting Things Done">GTD</abbr> Weekly Review</h1>
 
-  <p>
-    <% if (user) { %>
-    <a href="/auth/logout">Logout</a>
-    <% } else { %>
-    <a href="/auth/login">Login</a>
-    <% } %>
-  </p>
-
+  <ul>
+  <% if (user) { %>
+    <li><a href="/weekly-review">Weekly Review</a></li>
+    <li><a href="/auth/logout">Logout</a></li>
+  <% } else { %>
+    <li><a href="/auth/login">Login</a></li>
+  <% } %>
+  </ul>
+  
   <%- include('partials/github-fork') %>
 </body>
 </html>
