--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
     <li><a href="/auth/login">Login</a></li>
   <% } %>
   </ul>
-  
-  <%- include('partials/github-fork') %>
+
+  <%- include('partials/footer') %>
 </body>
 </html>
