--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,6 @@
 
   <a href="/auth/todoist">Login to Todoist</a>
 
-  <%- include('partials/github-fork') %>
+  <%- include('partials/footer') %>
 </body>
 </html>
